UtahLiveDataTest/src/objects/MOE__c.object
<CustomObject>
    <fields>
        <fullName>LEA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MOEs</relationshipLabel>
        <relationshipName>MOEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MetMOE1__c</fullName>
        <label>MetMOE1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                    <default>true</default>
                    <label>YES</label>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MetMOE2__c</fullName>
        <label>MetMOE2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                    <default>true</default>
                    <label>YES</label>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MetMOE3__c</fullName>
        <label>MetMOE3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriorYearLevelOfEffort1__c</fullName>
        <label>PriorYearLevelOfEffort1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorYearLevelOfEffort2__c</fullName>
        <label>PriorYearLevelOfEffort2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorYearLevelOfEffort3__c</fullName>
        <label>PriorYearLevelOfEffort3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RequiredLevelOfEffort1__c</fullName>
        <label>RequiredLevelOfEffort1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RequiredLevelOfEffort2__c</fullName>
        <label>RequiredLevelOfEffort2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RequiredLevelOfEffort3__c</fullName>
        <label>RequiredLevelOfEffort3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MST: Fiscal Year</label>
        <referenceTo>FiscalYear__c</referenceTo>
        <relationshipLabel>MOEs</relationshipLabel>
        <relationshipName>MOEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MOE</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MOE Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MOEs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>